--- a/html_files/html.html
+++ b/html_files/html.html
@@ -14,26 +14,15 @@
 <body>
   <div id="main">
     <div id="side-bar">
-      <h1>SKYWARD</h1>
+      <img src="https://ebraude-my.sharepoint.com/personal/dina_kakiashvili_e_braude_ac_il/Documents/Snip_TEMP0001.jpg" alt="logo image">
       <button id="home-btn" class="sidebar-btn">HOME</button>
       <button id="play-btn" class="sidebar-btn">PLAY!</button>
       <button id="config-btn" class="sidebar-btn">CONFIG</button>
     </div>
     <div id="body">
-    <div class="headline">
-    <div class="headline">
-      <h1>Welcome to SkyWard!</h1>
-    </div>
-    <div class="grid-container">
 
-
-
-        <div class="element" id="home-stats">Stats</div>
-        <div class="element" id="home-leader">Leaderboard</div>
-        
 
     </div>
-    <div class="element" id="home-trophy">Trophies</div>
   </div>
 </body>
 </html>
