--- a/html_files/html.html
+++ b/html_files/html.html
@@ -1,28 +1,32 @@
 <html>
+
 <head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
 
-  
 </head>
+
 <body>
-  <div id="main">
-    <div id="side-bar">
-      <img src="https://ebraude-my.sharepoint.com/personal/dina_kakiashvili_e_braude_ac_il/Documents/Snip_TEMP0001.jpg" alt="logo image">
-      <button id="home-btn" class="sidebar-btn">HOME</button>
-      <button id="play-btn" class="sidebar-btn">PLAY!</button>
-      <button id="config-btn" class="sidebar-btn">CONFIG</button>
-    </div>
-    <div id="body">
+    <div id="main">
+        <div id="side-bar">
+            <img src="https://raw.githubusercontent.com/DinaKakiashvili/test/23a23c21ea5aef7dd8f4c9517884829612fd2aa3/SkyWardLogo.jpg"
+                alt="Image">
+            <input placeholder='Username' for='username' type='text' id='username-input'></input>
+            <input placeholder='Password' for='password' type='password' id='password-input'></input>
+            <button id="login-btn" class="sidebar-btn">LOGIN</button>
+            <label for='login-error' class='error-label' id='login-error-label'></label>
+        </div>
+        <div id="body">
 
 
+        </div>
     </div>
-  </div>
 </body>
+
 </html>
